test/compile_error/missing_paths_test.exs
defmodule ApicalTest.CompileError.MissingPathsTest do
  use ExUnit.Case, async: true

  test "this"
end
